syntax = "proto3";
package test;

message TestMessage {
	string foo = 1;
}
